fix overflow issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,9 +12,6 @@ body {
   font-size: 16px;
   line-height: 26px;
   font-feature-settings: "liga" off;
-}
-
-body {
   overflow-x: hidden;
 }
 
